--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -1,22 +1,22 @@
 ---
-title: "Hello R Markdown"
-author: "Frida Gomam"
-date: 2015-07-23T21:13:14-05:00
+title: "Hello World!"
+author: "Sudipta Saha"
+date: 2018-08-18T21:13:14-05:00
 categories: ["R"]
-tags: ["R Markdown", "plot", "regression"]
+#tags: ["R Markdown", "plot", "regression"]
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE,eval=FALSE}
 knitr::opts_chunk$set(collapse = TRUE)
 ```
 
 # R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+#This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see #<http://rmarkdown.rstudio.com>.
 
-You can embed an R code chunk like this:
+#You can embed an R code chunk like this:
 
-```{r cars}
+```{r cars,eval=FALSE}
 summary(cars)
 fit <- lm(dist ~ speed, data = cars)
 fit
@@ -24,9 +24,9 @@ fit
 
 # Including Plots
 
-You can also embed plots. See Figure \@ref(fig:pie) for example:
+#You can also embed plots. See Figure \@ref(fig:pie) for example:
 
-```{r pie, fig.cap='A fancy pie chart.', tidy=FALSE}
+```{r pie, fig.cap='A fancy pie chart.', tidy=FALSE,eval=FALSE}
 par(mar = c(0, 1, 0, 1))
 pie(
   c(280, 60, 20),
